--- a/public/index.html
+++ b/public/index.html
@@ -26,24 +26,11 @@
   <title>Bank Smarter, Easy Acount in Minutes</title>
 
   <link rel="icon" type="image/png" href="front/img/favicon.png">
-  <!-- Smartsupp Live Chat script -->
-  <script type="text/javascript">
-    var _smartsupp = _smartsupp || {};
-    _smartsupp.key = '1f685202fd9bedc68957249f104279a416cf6ad1';
-    window.smartsupp || (function (d) {
-      var s, c, o = smartsupp = function () { o._.push(arguments) }; o._ = [];
-      s = d.getElementsByTagName('script')[0]; c = d.createElement('script');
-      c.type = 'text/javascript'; c.charset = 'utf-8'; c.async = true;
-      c.src = 'https://www.smartsuppchat.com/loader.js?'; s.parentNode.insertBefore(c, s);
-    })(document);
-  </script>
-  <noscript> Powered by <a href=“https://www.smartsupp.com” target=“_blank”>Smartsupp</a></noscript>
+  
 
 </head>
 
 <body>
-
-
   <div id="root"></div>
   <!-- Links of JS files -->
   <!-- Links of JS files -->
@@ -64,7 +51,7 @@
   <script src="front/js/main2.js"></script>
 
 
-
+  <script src="//code.tidio.co/hbmmta83xrcuqddpnoe5bijjwnkrwuhg.js" async></script>
 </body>
 
 </html>
